# nimbletl

./: pyproject.toml
nimbletl/: odata_v4_to_gcs.py  tasks.py  temp_odata4_notebook.ipynb  test-cbs-v4-to-parquet.parquet
temp/20201111/parquet/: cbs.82807NED_BedrijfstakkenBranchesSBI2008Codes.parquet  cbs.82807NED_Dimensions.parquet  cbs.82807NED_GeslachtCodes.parquet  cbs.82807NED_MeasureCodes.parquet  cbs.82807NED_Observations.parquet  cbs.82807NED_PeriodenCodes.parquet  cbs.82807NED_PeriodenGroups.parquet  cbs.82807NED_PersoonskenmerkenCodes.parquet
temp/ndjson/: cbs.82807NED_BedrijfstakkenBranchesSBI2008Codes.ndjson  cbs.82807NED_BedrijfstakkenBranchesSBI2008Groups.ndjson  cbs.82807NED_Dimensions.ndjson  cbs.82807NED_GeslachtCodes.ndjson  cbs.82807NED_MeasureCodes.ndjson  cbs.82807NED_PeriodenCodes.ndjson  cbs.82807NED_PeriodenGroups.ndjson  cbs.82807NED_PersoonskenmerkenCodes.ndjson  cbs.82807NED_PersoonskenmerkenGroups.ndjson
temp/parquet/: cbs.82807NED_BedrijfstakkenBranchesSBI2008Groups.parquet  cbs.82807NED_PersoonskenmerkenGroups.parquet
